# LeanMarathon

./: .gitignore  README.md  lake-manifest.json  lakefile.toml  pyproject.toml
.scripts/: create-worktree.sh  per_node_worker_loop.py  stage1_blueprint_loop.py  verify_blueprint.py
agents/Blueprinter/docs/: inputs.yml
agents/Blueprinter/docs/contracts/: blueprint-format.md  latex-quality.md
agents/Refiner/: AGENTS.md
agents/Refiner/.codex/: config.toml
agents/Refiner/.codex/hooks/: ralph_wiggum_stop.py
agents/Refiner/docs/: inputs.yml  state.md
agents/Refiner/docs/contracts/: blueprint-format.md  latex-quality.md
agents/Refiner/docs/deliver/: pr.md
agents/Refiner/docs/grounding/: SKILL.md
agents/Target-Reviewer/: AGENTS.md
agents/Target-Reviewer/.codex/: config.toml
agents/Target-Reviewer/docs/: inputs.yml
agents/Worker/: AGENTS.md
agents/Worker/.codex/: config.toml
agents/Worker/docs/: inputs.yml  state.md
config/: local.example.toml
configs/Blueprinter/: AGENTS.md
configs/Blueprinter/.codex/: config.toml
configs/Blueprinter/docs/: delivery.yml  state.md
configs/Refiner/.codex/: config.toml
configs/Worker/.codex/: config.toml
docs/: agent-contracts.md  dependencies.md  github-setup.md  hpc-slurm.md  params.md  quickstart.md  troubleshooting.md
mcp-servers/apply-patch/: README.md  apply_patch_mcp.py
mcp-servers/dag-tracker/: README.md  dag_tracker_mcp.py
src/leanmarathon/: __init__.py  cli.py
tests/: test_start_prompts.py  test_verify_blueprint_comment_hygiene.py
workflows/: verify-blueprint.yml  warmup-cache.yml
(+33 files in other folders)
