[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "LeanMarathon"
version = "0.1.0"
description = "End-to-end Lean blueprint generation and proof orchestration."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
leanmarathon = "leanmarathon.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/leanmarathon"]
